--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--Lab 2 Main Index File-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -25,7 +24,10 @@
         place these within <script> tags-->
 
         <!--put your external script links here-->
+        <script type="text/javascript" src="lib/d3-geo-projection.js"></script>
+        <script type="text/javascript" src="lib/d3-geo-projection.min.js"></script>
+        <script type="text/javascript" src="lib\topojson.js"></script>
         <script type="text/javascript" src="lib/d3.js"></script>
-        <script type="text/javascript" src="js/bubblechart.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
