--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
         <script type="text/javascript" src="lib\topojson.js"></script>
         <script type="text/javascript" src="lib/d3.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
+        <!--<script type="text/javascript" src="js/Lessons_Activity9 copy.js"></script>-->
     </body>
 </html>
